Add api documentation with swagger
