# app/Http/Controllers/Api/UserController.php
@@ -18,7 +18,6 @@ class UserController extends Controller
    *     path="/api/v1/user/register",
    *     tags={"user"},
    *     summary="Register user",
-   *     description="Register user",
    *     operationId="register",
    *     @OA\RequestBody(
    *         @OA\MediaType(
@@ -58,11 +57,11 @@ class UserController extends Controller
    *                 example={
    *                     "name":"John Doe",
    *                     "email":"johndoe@example.com",
-   *                     "address":"USA",
+   *                     "address":"Valid address",
    *                     "mobile_phone":"0818512938251",
    *                     "role_id":"1",
-   *                     "password":"12345678",
-   *                     "password_confirmation":"12345678"
+   *                     "password":"pass",
+   *                     "password_confirmation":"pass"
    *                }
    *             )
    *         )
@@ -119,7 +118,6 @@ class UserController extends Controller
    *     path="/api/v1/user/login",
    *     tags={"user"},
    *     summary="Login user",
-   *     description="Endpoint for user login",
    *     operationId="login",
    *     @OA\RequestBody(
    *         @OA\MediaType(
@@ -190,10 +188,11 @@ class UserController extends Controller
    *     path="/api/v1/user/profile/{user_id}",
    *     tags={"user"},
    *     summary="Get user by id",
-   *     description="Get user by id",
    *     operationId="profile",
-   *     security={{"passport": {}}},
    *     @OA\Parameter(
+   *         @OA\MediaType(
+   *             mediaType="application/json",
+   *         ),
    *         in="path",
    *         name="user_id",
    *         required=true,
@@ -201,17 +200,19 @@ class UserController extends Controller
    *     ),
    *     @OA\Response(
    *         response=200,
-   *         description="Success"
+   *         description="Success",
+   *         @OA\MediaType(mediaType="application/json")
    *     ),
    *     @OA\Response(
    *         response=404,
    *         description="Failed"
    *     ),
+   *     security={ {"passport": {}} }
    * )
    */
   public function profile($user_id)
   {
-    $data = User::where('id', $user_id)->first();
+    $data = User::where('id', Auth::id())->find($user_id);
     if ($data) {
       return response()->json([
         'message' => 'Success',
@@ -222,6 +223,66 @@ class UserController extends Controller
     }
   }
 
+  /**
+   * @OA\Put(
+   *     path="/api/v1/user/edit/{user_id}",
+   *     tags={"user"},
+   *     summary="Edit user",
+   *     operationId="update",
+   *     @OA\Parameter(
+   *         in="path",
+   *         name="user_id",
+   *         required=true,
+   *         @OA\Schema(type="integer")
+   *     ),
+   *     @OA\RequestBody(
+   *         @OA\MediaType(
+   *             mediaType="application/json",
+   *             @OA\Schema(
+   *                 @OA\Property(
+   *                      type="object",
+   *                      @OA\Property(
+   *                          property="name",
+   *                          type="string"
+   *                      ),
+   *                      @OA\Property(
+   *                          property="email",
+   *                          type="email"
+   *                      ),
+   *                      @OA\Property(
+   *                          property="address",
+   *                          type="string"
+   *                      ),
+   *                      @OA\Property(
+   *                          property="mobile_phone",
+   *                          type="integer"
+   *                      ),
+   *                      @OA\Property(
+   *                          property="role_id",
+   *                          type="integer"
+   *                      )
+   *                 ),
+   *                 example={
+   *                     "name":"John Doe",
+   *                     "email":"johndoe@example.com",
+   *                     "address":"USA",
+   *                     "mobile_phone":"0818512938251",
+   *                     "role_id":"1"
+   *                }
+   *             )
+   *         )
+   *      ),
+   *      @OA\Response(
+   *          response=200,
+   *          description="success"
+   *      ),
+   *      @OA\Response(
+   *          response=400,
+   *          description="error"
+   *      ),
+   *     security={ {"passport": {}} }
+   * )
+   */
   public function update(Request $request, $id)
   {
     // Check if user id is same from the param and user id = id
@@ -256,6 +317,24 @@ class UserController extends Controller
     }
   }
 
+  /**
+   * @OA\Post(
+   *     path="/api/v1/user/logout",
+   *     tags={"user"},
+   *     summary="Logout user",
+   *     operationId="logout",
+   *      @OA\Response(
+   *          response=200,
+   *          description="success",
+   *          @OA\MediaType(mediaType="application/json")
+   *      ),
+   *      @OA\Response(
+   *          response=400,
+   *          description="error"
+   *      ),
+   *     security={ {"passport": {}} }
+   * )
+   */
   public function logout()
   {
     Auth::user()->token()->revoke();
